# sftp-pipeline

./: .env  README.md  end_to_end_scheduling.py  process_sftp_file.py  pyproject.toml  sftp_client.py
tools/: Dockerfile.CronJob  run-docker-build.sh
