[tool.poetry]
name = "sftp-pipeline"
version = "0.1.0"
description = ""
authors = [
    "sankeerthana-sarvam <sankeerthana@sarvam.ai>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
schedule = ">=1.2.2,<2.0.0"
paramiko = ">=3.5.1,<4.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
httpx = ">=0.28.1,<0.29.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
